[gd_scene load_steps=8 format=3 uid="uid://bpm7b71cq8boh"]

[ext_resource type="Script" uid="uid://c1oo5qwt35wci" path="res://Scripts/Generation_System/proc_gen_world.gd" id="1_ys06r"]
[ext_resource type="TileSet" uid="uid://vod85kyfro86" path="res://tileSets/world.tres" id="2_it8ja"]
[ext_resource type="TileSet" uid="uid://bpehb7vl424hv" path="res://tileSets/props.tres" id="4_ighaj"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_acytt"]
frequency = 0.0107

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_nh36c"]
noise = SubResource("FastNoiseLite_acytt")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_wcqkt"]
noise_type = 0
frequency = 0.35
fractal_octaves = 1

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qvt82"]
seamless_blend_skirt = 0.215
bump_strength = 36.5
noise = SubResource("FastNoiseLite_wcqkt")

[node name="proc_gen_world" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_ys06r")
noise_height_text = SubResource("NoiseTexture2D_nh36c")
noise_tree_text = SubResource("NoiseTexture2D_qvt82")

[node name="fall_layer" type="TileMapLayer" parent="."]
z_index = -1
tile_set = ExtResource("2_it8ja")

[node name="summer_layer" type="TileMapLayer" parent="."]
z_index = -1
tile_set = ExtResource("2_it8ja")

[node name="spring_layer" type="TileMapLayer" parent="."]
z_index = -1
tile_set = ExtResource("2_it8ja")

[node name="winter_layer" type="TileMapLayer" parent="."]
z_index = -1
tile_set = ExtResource("2_it8ja")

[node name="ground_layer" type="TileMapLayer" parent="."]
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_set = ExtResource("4_ighaj")

[node name="enviroment_layer" type="TileMapLayer" parent="."]
z_index = 1
y_sort_enabled = true
use_parent_material = true
tile_set = ExtResource("2_it8ja")
